--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/main.min.css">
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
@@ -65,38 +65,44 @@
       <section class="features-section">
         <div class="conteiner-features">
           <ul>
-            <li class="icon-antenna">
-              <svg>
-                <use href="./images/svg-sprite.svg#icon-antenna"></use>
-              </svg>
+            <li>
+              <div class="icon-block">
+                <svg>
+                  <use href="./images/svg-sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h2>Внимание к деталям</h2>
               <p>
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="icon-vector">
+            <li>
+              <div class="icon-block">
               <svg>
                 <use href="./images/svg-sprite.svg#icon-vector"></use>
               </svg>
+            </div>
               <h2>Пунктуальность</h2>
               <p>
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="icon-diagram">
+            <li>
+                            <div class="icon-block">
               <svg>
                 <use href="./images/svg-sprite.svg#icon-diagram"></use>
               </svg>
-
+</div>
               <h2>Планирование</h2>
               <p>
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="icon-astronaut">
+            <li>
+              <div class="icon-block">
               <svg>
                 <use
                   href="./images/svg-sprite.svg#icon-astronaut"
@@ -104,6 +110,7 @@
                   height="70px"
                 ></use>
               </svg>
+              </div>
               <h2>Современные технологии</h2>
               <p>
                 Значимость этих проблем настолько очевидна, что реализация
@@ -441,13 +448,13 @@
       </div>
     </footer>
     <!-- ARROW -->
-    <div class="arrow-conteiner">
+    <!-- <div class="arrow-conteiner">
       <a href="#">
         <svg>
           <use href="./images/svg-sprite.svg#icon-arrow"></use>
         </svg>
       </a>
-    </div>
+    </div> -->
     <!-- MODAL -->
     <div class="backdrop is-hidden" data-backdrop>
       <div class="modal">
@@ -507,11 +514,11 @@
             <label for="coment" class="label-text">Комментарий</label>
           </div>
           <div class="checkbox-box">
-                        <label for="license" class="checkbox-label">
-            <input type="checkbox" id="license" name="license" />
-            <svg>
-              <use href="./images/svg-sprite.svg#icon-check"></use>
-            </svg>
+            <label for="license" class="checkbox-label">
+              <input type="checkbox" id="license" name="license" />
+              <svg>
+                <use href="./images/svg-sprite.svg#icon-check"></use>
+              </svg>
               <span>Соглашаюсь с рассылкой и принимаю</span>
               <a href="">Условия договора</a>
             </label>
