--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             </li>
             <li>
               <div class="icon-block">
-              <svg>
-                <use href="./images/svg-sprite.svg#icon-vector"></use>
-              </svg>
-            </div>
+                <svg>
+                  <use href="./images/svg-sprite.svg#icon-vector"></use>
+                </svg>
+              </div>
               <h2>Пунктуальность</h2>
               <p>
                 Задача организации, в особенности же рамки и место обучения
@@ -90,11 +90,11 @@
               </p>
             </li>
             <li>
-                            <div class="icon-block">
-              <svg>
-                <use href="./images/svg-sprite.svg#icon-diagram"></use>
-              </svg>
-</div>
+              <div class="icon-block">
+                <svg>
+                  <use href="./images/svg-sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h2>Планирование</h2>
               <p>
                 Равным образом консультация с широким активом в значительной
@@ -103,13 +103,13 @@
             </li>
             <li>
               <div class="icon-block">
-              <svg>
-                <use
-                  href="./images/svg-sprite.svg#icon-astronaut"
-                  width="70px"
-                  height="70px"
-                ></use>
-              </svg>
+                <svg>
+                  <use
+                    href="./images/svg-sprite.svg#icon-astronaut"
+                    width="70px"
+                    height="70px"
+                  ></use>
+                </svg>
               </div>
               <h2>Современные технологии</h2>
               <p>
@@ -168,11 +168,7 @@
           <ul>
             <!--John Smith-->
             <li class="team-item">
-              <img
-                src="./images/john_smith.jpg"
-                alt="foto John Smith"
-                width="270px"
-              />
+              <img src="./images/john_smith.jpg" alt="foto John Smith" />
               <h3>John Smith</h3>
               <p>Product Designer</p>
               <ul>
@@ -208,11 +204,7 @@
             </li>
             <!--Marta Stewart-->
             <li class="team-item">
-              <img
-                src="./images/marta_stewart.jpg"
-                alt="foto Marta Stewart"
-                width="270px"
-              />
+              <img src="./images/marta_stewart.jpg" alt="foto Marta Stewart" />
               <h3>Marta Stewart</h3>
               <p>Frontend Developer</p>
               <ul>
@@ -248,11 +240,7 @@
             </li>
             <!--Robert Jakis-->
             <li class="team-item">
-              <img
-                src="./images/robert_jakis.jpg"
-                alt="foto Robert Jakis"
-                width="270px"
-              />
+              <img src="./images/robert_jakis.jpg" alt="foto Robert Jakis" />
               <h3>Robert Jakis</h3>
               <p>Marketing</p>
               <ul>
@@ -288,11 +276,7 @@
             </li>
             <!--Martin Doe-->
             <li class="team-item">
-              <img
-                src="./images/martin_doe.jpg"
-                alt="foto Martin Doe"
-                width="270px"
-              />
+              <img src="./images/martin_doe.jpg" alt="foto Martin Doe" />
               <h3>Martin Doe</h3>
               <p>UI Designer</p>
               <ul>
