--- a/index.html
+++ b/index.html
@@ -503,9 +503,10 @@
               <svg>
                 <use href="./images/svg-sprite.svg#icon-check"></use>
               </svg>
+              <div class="text-checkbox-label">
               <span>Соглашаюсь с рассылкой и принимаю</span>
               <a href="">Условия договора</a>
-            </label>
+            </label></div>
           </div>
           <button>Отправить</button>
         </form>
