--- a/portfolio.html
+++ b/portfolio.html
@@ -285,12 +285,12 @@
     </footer>
     <!-- ARROW -->
 
-    <div class="arrow-conteiner">
+    <!-- <div class="arrow-conteiner">
       <a href="#">
         <svg>
           <use href="./images/svg-sprite.svg#icon-arrow"></use>
         </svg>
       </a>
-    </div>
+    </div> -->
   </body>
 </html>
