Медиа на портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,163 +73,179 @@
     </header>
     <main>
       <section class="examples-works">
-        <div class="conteiner-button">
-          <h1 class="visually-hidden">examples of works</h1>
-          <ul>
-            <li><button class="all" type="button">Все</button></li>
-            <li><button class="all-site" type="button">Веб-сайты</button></li>
-            <li><button class="app" type="button">Приложения</button></li>
-            <li><button class="design" type="button">Дизайн</button></li>
-            <li><button class="marketing" type="button">Маркетинг</button></li>
-          </ul>
-        </div>
-        <div class="conteiner-examples">
-          <ul>
-            <li>
-              <a href="">
-                <div class="image-cart">
-                  <img src="./images/img-ltop.jpg" alt="laptop" />
-                  <p class="text-overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </div>
-                <div class="content-cart">
-                  <h2 class="">Технокряк</h2>
-                  <p>Веб-сайт</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <div class="image-cart">
-                  <img src="./images/img-basket.jpg" alt="basketball players" />
-                  <p class="text-overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </div>
-                <div class="content-cart">
-                  <h2>Постер New Orlean vs Golden Stars</h2>
-                  <p>Дизайн</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <div class="image-cart">
-                  <img src="./images/img-seafood.jpg" alt="fish" />
-                  <p class="text-overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </div>
-                <div class="content-cart">
-                  <h2>Ресторан Seafood</h2>
-                  <p>Приложение</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <div class="image-cart">
-                  <img src="./images/img-headphones.jpg" alt="headphones" />
-                  <p class="text-overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </div>
-                <div class="content-cart">
-                  <h2>Проект Prime</h2>
-                  <p>Маркетинг</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <div class="image-cart">
-                  <img src="./images/img-box.jpg" alt="box" />
-                  <p class="text-overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </div>
-                <div class="content-cart">
-                  <h2>Проект Boxes</h2>
-                  <p>Приложение</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <div class="image-cart">
-                  <img src="./images/img-monitor.jpg" alt="monitor" />
-                  <p class="text-overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </div>
-                <div class="content-cart">
-                  <h2>Inspiration has no Borders</h2>
-                  <p>Веб-сайт</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <div class="image-cart">
-                  <img src="./images/img-book.jpg" alt="book" />
-                  <p class="text-overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </div>
-                <div class="content-cart">
-                  <h2>Издание Limited Edition</h2>
-                  <p>Дизайн</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <div class="image-cart">
-                  <img src="./images/img-label.jpg" alt="label" />
-                  <p class="text-overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </div>
-                <div class="content-cart">
-                  <h2>Проект LAB</h2>
-                  <p>Маркетинг</p>
-                </div>
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <div class="image-cart">
-                  <img src="./images/laptop.jpg" alt="laptop" />
-                  <p class="text-overlay">
-                    Технокряк это современная площадка распространения
-                    коронавируса. Компании используют эту платформу для
-                    цифрового шпионажа и атак на защищённые сервера конкурентов.
-                  </p>
-                </div>
-                <div class="content-cart">
-                  <h2>Growing Business</h2>
-                  <p>Growing Business</p>
-                </div>
-              </a>
-            </li>
-          </ul>
+        <div class="conteiner-examples-works">
+          <div class="conteiner-button">
+            <h1 class="visually-hidden">examples of works</h1>
+            <ul>
+              <li><button class="all" type="button">Все</button></li>
+              <li><button class="all-site" type="button">Веб-сайты</button></li>
+              <li><button class="app" type="button">Приложения</button></li>
+              <li><button class="design" type="button">Дизайн</button></li>
+              <li>
+                <button class="marketing" type="button">Маркетинг</button>
+              </li>
+            </ul>
+          </div>
+          <div class="conteiner-examples">
+            <ul>
+              <li>
+                <a href="">
+                  <div class="image-cart">
+                    <img src="./images/img-ltop.jpg" alt="laptop" />
+                    <p class="text-overlay">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <div class="content-cart">
+                    <h2 class="">Технокряк</h2>
+                    <p>Веб-сайт</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <div class="image-cart">
+                    <img
+                      src="./images/img-basket.jpg"
+                      alt="basketball players"
+                    />
+                    <p class="text-overlay">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <div class="content-cart">
+                    <h2>Постер New Orlean vs Golden Stars</h2>
+                    <p>Дизайн</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <div class="image-cart">
+                    <img src="./images/img-seafood.jpg" alt="fish" />
+                    <p class="text-overlay">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <div class="content-cart">
+                    <h2>Ресторан Seafood</h2>
+                    <p>Приложение</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <div class="image-cart">
+                    <img src="./images/img-headphones.jpg" alt="headphones" />
+                    <p class="text-overlay">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <div class="content-cart">
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <div class="image-cart">
+                    <img src="./images/img-box.jpg" alt="box" />
+                    <p class="text-overlay">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <div class="content-cart">
+                    <h2>Проект Boxes</h2>
+                    <p>Приложение</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <div class="image-cart">
+                    <img src="./images/img-monitor.jpg" alt="monitor" />
+                    <p class="text-overlay">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <div class="content-cart">
+                    <h2>Inspiration has no Borders</h2>
+                    <p>Веб-сайт</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <div class="image-cart">
+                    <img src="./images/img-book.jpg" alt="book" />
+                    <p class="text-overlay">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <div class="content-cart">
+                    <h2>Издание Limited Edition</h2>
+                    <p>Дизайн</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <div class="image-cart">
+                    <img src="./images/img-label.jpg" alt="label" />
+                    <p class="text-overlay">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <div class="content-cart">
+                    <h2>Проект LAB</h2>
+                    <p>Маркетинг</p>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <div class="image-cart">
+                    <img src="./images/laptop.jpg" alt="laptop" />
+                    <p class="text-overlay">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                  <div class="content-cart">
+                    <h2>Growing Business</h2>
+                    <p>Growing Business</p>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
