Медиа на таблетку

--- a/portfolio.html
+++ b/portfolio.html
@@ -250,56 +250,58 @@
     </main>
     <footer>
       <div class="conteiner-footer">
-        <div class="conteiner-logo">
-          <a class="logo-footer" href="./index.html"
-            ><span class="logo-footer-web">Web</span> Studio</a
-          >
-          <ul>
-            <li>
-              <address class="address-list">
-                г. Киев, пр-т Леси Украинки, 26
-              </address>
-            </li>
-            <li>
-              <a class="footer-mail-link" href="">info@example.com</a>
-            </li>
-            <li>
-              <a class="footer-tell-link" href="">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </div>
-        <div class="conteiner-join">
-          <b class="text-join">присоединяйтесь</b>
-          <ul>
-            <li class="item-social">
-              <a href="" aria-label="Instagram link">
-                <svg>
-                  <use href="./images/svg-sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="item-social">
-              <a href="" aria-label="Twitter link">
-                <svg>
-                  <use href="./images/svg-sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="item-social">
-              <a href="" aria-label="Facebook link">
-                <svg>
-                  <use href="./images/svg-sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="item-social">
-              <a href="" aria-label="LinkedIn link">
-                <svg>
-                  <use href="./images/svg-sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+        <div class="conteiner-logo-join">
+          <div class="conteiner-logo">
+            <a class="logo-footer" href="./index.html"
+              ><span class="logo-footer-web">Web</span> Studio</a
+            >
+            <ul>
+              <li>
+                <address class="address-list">
+                  г. Киев, пр-т Леси Украинки, 26
+                </address>
+              </li>
+              <li>
+                <a class="footer-mail-link" href="">info@example.com</a>
+              </li>
+              <li>
+                <a class="footer-tell-link" href="">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </div>
+          <div class="conteiner-join">
+            <b class="text-join">присоединяйтесь</b>
+            <ul>
+              <li class="item-social">
+                <a href="" aria-label="Instagram link">
+                  <svg>
+                    <use href="./images/svg-sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item-social">
+                <a href="" aria-label="Twitter link">
+                  <svg>
+                    <use href="./images/svg-sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item-social">
+                <a href="" aria-label="Facebook link">
+                  <svg>
+                    <use href="./images/svg-sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item-social">
+                <a href="" aria-label="LinkedIn link">
+                  <svg>
+                    <use href="./images/svg-sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="conteiner-subscription">
           <b>Подпишитесь на рассылку</b>
