--- a/index.html
+++ b/index.html
@@ -185,7 +185,14 @@
           <ul>
             <!--John Smith-->
             <li class="team-item">
-              <img src="./images/john_smith.jpg" alt="foto John Smith" />
+              <img
+                srcset="
+                  ./images/john_smith-1x.jpg 1x,
+                  ./images/john_smith-2x.jpg 2x
+                "
+                src="./images/john_smith-1x.jpg"
+                alt="foto John Smith"
+              />
               <h3>John Smith</h3>
               <p>Product Designer</p>
               <ul>
@@ -221,7 +228,14 @@
             </li>
             <!--Marta Stewart-->
             <li class="team-item">
-              <img src="./images/marta_stewart.jpg" alt="foto Marta Stewart" />
+              <img
+                srcset="
+                  ./images/marta_stewart-1x.jpg 1x,
+                  ./images/marta_stewart-2x.jpg 2x
+                "
+                src="./images/marta_stewart-1x.jpg"
+                alt="foto Marta Stewart"
+              />
               <h3>Marta Stewart</h3>
               <p>Frontend Developer</p>
               <ul>
@@ -257,7 +271,14 @@
             </li>
             <!--Robert Jakis-->
             <li class="team-item">
-              <img src="./images/robert_jakis.jpg" alt="foto Robert Jakis" />
+              <img
+                srcset="
+                  ./images/robert_jakis-1x.jpg 1x,
+                  ./images/robert_jakis-2x.jpg 2x
+                "
+                src="./images/robert_jakis-1x.jpg"
+                alt="foto Robert Jakis"
+              />
               <h3>Robert Jakis</h3>
               <p>Marketing</p>
               <ul>
@@ -293,7 +314,14 @@
             </li>
             <!--Martin Doe-->
             <li class="team-item">
-              <img src="./images/martin_doe.jpg" alt="foto Martin Doe" />
+              <img
+                srcset="
+                  ./images/martin_doe-1x.jpg 1x,
+                  ./images/martin_doe-2x.jpg 2x
+                "
+                src="./images/martin_doe-1x.jpg"
+                alt="foto Martin Doe"
+              />
               <h3>Martin Doe</h3>
               <p>UI Designer</p>
               <ul>
