Портфолио на десктоп

--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
       </div>
     </header>
     <main>
-      <section class="examples-works">
+      <section class="section-examples-works">
         <div class="conteiner-examples-works">
           <div class="conteiner-button">
             <ul>
@@ -90,7 +90,14 @@
               <li>
                 <a href="">
                   <div class="image-cart">
-                    <img src="./images/img-ltop.jpg" alt="laptop" />
+                    <img
+                      srcset="
+                        ./images/img-ltop-1x.jpg 1x,
+                        ./images/img-ltop-2x.jpg 2x
+                      "
+                      src="./images/img-ltop-1x.jpg"
+                      alt="laptop"
+                    />
                     <p class="text-overlay">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -108,7 +115,11 @@
                 <a href="">
                   <div class="image-cart">
                     <img
-                      src="./images/img-basket.jpg"
+                      srcset="
+                        ./images/img-basket-1x.jpg 1x,
+                        ./images/img-basket-2x.jpg 2x
+                      "
+                      src="./images/img-basket-1x.jpg"
                       alt="basketball players"
                     />
                     <p class="text-overlay">
@@ -127,7 +138,14 @@
               <li>
                 <a href="">
                   <div class="image-cart">
-                    <img src="./images/img-seafood.jpg" alt="fish" />
+                    <img
+                      srcset="
+                        ./images/img-seafood-1x.jpg 1x,
+                        ./images/img-seafood-2x.jpg 2x
+                      "
+                      src="./images/img-seafood-1x.jpg"
+                      alt="fish"
+                    />
                     <p class="text-overlay">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -144,7 +162,14 @@
               <li>
                 <a href="">
                   <div class="image-cart">
-                    <img src="./images/img-headphones.jpg" alt="headphones" />
+                    <img
+                      srcset="
+                        ./images/img-headphones-1x.jpg 1x,
+                        ./images/img-headphones-2x.jpg 2x
+                      "
+                      src="./images/img-headphones-1x.jpg"
+                      alt="headphones"
+                    />
                     <p class="text-overlay">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
