--- a/portfolio.html
+++ b/portfolio.html
@@ -41,10 +41,10 @@
         <nav class="navigation" data-menu>
           <ul class="navigation-link">
             <li class="item">
-              <a class="studio-link-activ" href="./index.html">Студия</a>
+              <a class="studio-link" href="./index.html">Студия</a>
             </li>
             <li class="item">
-              <a class="portfolio" href="./portfolio.html">Портфолио</a>
+              <a class="portfolio-activ" href="./portfolio.html">Портфолио</a>
             </li>
             <li class="item">
               <a class="contacts" href="#">Контакты</a>
@@ -186,7 +186,14 @@
               <li>
                 <a href="">
                   <div class="image-cart">
-                    <img src="./images/img-box.jpg" alt="box" />
+                    <img
+                      srcset="
+                        ./images/img-box-1x.jpg 1x,
+                        ./images/img-box-2x.jpg 2x
+                      "
+                      src="./images/img-box-1x.jpg"
+                      alt="box"
+                    />
                     <p class="text-overlay">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -203,7 +210,14 @@
               <li>
                 <a href="">
                   <div class="image-cart">
-                    <img src="./images/img-monitor.jpg" alt="monitor" />
+                    <img
+                      srcset="
+                        ./images/img-monitor-1x.jpg 1x,
+                        ./images/img-monitor-2x.jpg 2x
+                      "
+                      src="./images/img-monitor.jpg"
+                      alt="monitor"
+                    />
                     <p class="text-overlay">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -220,7 +234,14 @@
               <li>
                 <a href="">
                   <div class="image-cart">
-                    <img src="./images/img-book.jpg" alt="book" />
+                    <img
+                      srcset="
+                        ./images/img-book-1x.jpg 1x,
+                        ./images/img-book-2x.jpg 2x
+                      "
+                      src="./images/img-book-1x.jpg"
+                      alt="book"
+                    />
                     <p class="text-overlay">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -237,7 +258,14 @@
               <li>
                 <a href="">
                   <div class="image-cart">
-                    <img src="./images/img-label.jpg" alt="label" />
+                    <img
+                      srcset="
+                        ./images/img-label-1x.jpg 1x,
+                        ./images/img-label-2x.jpg 2x
+                      "
+                      src="./images/img-label-1x.jpg"
+                      alt="label"
+                    />
                     <p class="text-overlay">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
@@ -254,7 +282,14 @@
               <li>
                 <a href="">
                   <div class="image-cart">
-                    <img src="./images/laptop.jpg" alt="laptop" />
+                    <img
+                      srcset="
+                        ./images/img-laptop-1x.jpg 1x,
+                        ./images/img-laptop-2x.jpg 2x
+                      "
+                      src="./images/img-laptop-1x.jpg"
+                      alt="laptop"
+                    />
                     <p class="text-overlay">
                       Технокряк это современная площадка распространения
                       коронавируса. Компании используют эту платформу для
