--- a/index.html
+++ b/index.html
@@ -185,15 +185,17 @@
           <ul>
             <!--John Smith-->
             <li class="team-item">
-              <img
-                srcset="
-                  ./images/john_smith-1x.jpg 1x,
-                  ./images/john_smith-2x.jpg 2x
-                "
-                src="./images/john_smith-1x.jpg"
-                alt="foto John Smith"
-              />
-              <h3>John Smith</h3>
+              <div class="image-box">
+                <img
+                  srcset="
+                    ./images/john_smith-1x.jpg 1x,
+                    ./images/john_smith-2x.jpg 2x
+                  "
+                  src="./images/john_smith-1x.jpg"
+                  alt="foto John Smith"
+                />
+              </div>
+              <h3>Николай Кучеренко</h3>
               <p>Product Designer</p>
               <ul>
                 <li>
@@ -228,15 +230,17 @@
             </li>
             <!--Marta Stewart-->
             <li class="team-item">
-              <img
-                srcset="
-                  ./images/marta_stewart-1x.jpg 1x,
-                  ./images/marta_stewart-2x.jpg 2x
-                "
-                src="./images/marta_stewart-1x.jpg"
-                alt="foto Marta Stewart"
-              />
-              <h3>Marta Stewart</h3>
+              <div class="image-box">
+                <img
+                  srcset="
+                    ./images/marta_stewart-1x.jpg 1x,
+                    ./images/marta_stewart-2x.jpg 2x
+                  "
+                  src="./images/marta_stewart-1x.jpg"
+                  alt="foto Marta Stewart"
+                />
+              </div>
+              <h3>Ольга Иванова</h3>
               <p>Frontend Developer</p>
               <ul>
                 <li>
@@ -271,15 +275,17 @@
             </li>
             <!--Robert Jakis-->
             <li class="team-item">
-              <img
-                srcset="
-                  ./images/robert_jakis-1x.jpg 1x,
-                  ./images/robert_jakis-2x.jpg 2x
-                "
-                src="./images/robert_jakis-1x.jpg"
-                alt="foto Robert Jakis"
-              />
-              <h3>Robert Jakis</h3>
+              <div class="image-box">
+                <img
+                  srcset="
+                    ./images/robert_jakis-1x.jpg 1x,
+                    ./images/robert_jakis-2x.jpg 2x
+                  "
+                  src="./images/robert_jakis-1x.jpg"
+                  alt="foto Robert Jakis"
+                />
+              </div>
+              <h3>Андрей Шевченко</h3>
               <p>Marketing</p>
               <ul>
                 <li>
@@ -314,15 +320,17 @@
             </li>
             <!--Martin Doe-->
             <li class="team-item">
-              <img
-                srcset="
-                  ./images/martin_doe-1x.jpg 1x,
-                  ./images/martin_doe-2x.jpg 2x
-                "
-                src="./images/martin_doe-1x.jpg"
-                alt="foto Martin Doe"
-              />
-              <h3>Martin Doe</h3>
+              <div class="image-box">
+                <img
+                  srcset="
+                    ./images/martin_doe-1x.jpg 1x,
+                    ./images/martin_doe-2x.jpg 2x
+                  "
+                  src="./images/martin_doe-1x.jpg"
+                  alt="foto Martin Doe"
+                />
+              </div>
+              <h3>Иван Николаев</h3>
               <p>UI Designer</p>
               <ul>
                 <li>
