--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
       </section>
       <!--Features-->
-      <section class="features-section">
+      <section class="features-section" data-menu>
         <div class="conteiner-features">
           <ul>
             <li>
